# tcalc

./: Doxyfile  README.md  annotated.html  annotated_dup.js  application_8hpp.html  application_8hpp.js  application_8hpp_source.html  base_8hpp.html  base_8hpp.js  base_8hpp_source.html  binaryop_8hpp.html  binaryop_8hpp.js  binaryop_8hpp_source.html  builtins_8hpp.html  builtins_8hpp.js  builtins_8hpp_source.html  calculator_8hpp.html  calculator_8hpp.js  calculator_8hpp_source.html  classes.html  classtcalc_1_1EvalContext-members.html  classtcalc_1_1EvalContext.html  classtcalc_1_1EvalContext.js  classtcalc_1_1Evaluator-members.html  classtcalc_1_1Evaluator.html  classtcalc_1_1Evaluator.js  classtcalc_1_1ast_1_1BaseVisitor-members.html  classtcalc_1_1ast_1_1BaseVisitor.html  classtcalc_1_1ast_1_1BaseVisitor.js  classtcalc_1_1ast_1_1BaseVisitor_3_01RT_01_4-members.html  classtcalc_1_1ast_1_1BaseVisitor_3_01RT_01_4.html  classtcalc_1_1ast_1_1BaseVisitor_3_01RT_01_4.js  classtcalc_1_1ast_1_1BaseVisitor_3_01void_01_4-members.html  classtcalc_1_1ast_1_1BaseVisitor_3_01void_01_4.html  classtcalc_1_1ast_1_1BaseVisitor_3_01void_01_4.js  classtcalc_1_1ast_1_1BinaryDivideNode-members.html  classtcalc_1_1ast_1_1BinaryDivideNode.html  classtcalc_1_1ast_1_1BinaryDivideNode.js  classtcalc_1_1ast_1_1BinaryEqualNode-members.html  classtcalc_1_1ast_1_1BinaryEqualNode.html  (+203 more)
.github/workflows/: doxygen.yml
docs/: SYNTAX.md  syntax_reference.md
include/: meson.build
include/tcalc/: builtins.hpp  common.hpp  error.hpp  eval.hpp  parser.hpp  priority.hpp  tcalc.hpp  token.hpp  tokenizer.hpp
include/tcalc/ast/: binaryop.hpp  control_flow.hpp  function.hpp  node.hpp  number.hpp  program.hpp  unaryop.hpp  variable.hpp
include/tcalc/visitor/: base.hpp  eval.hpp  print.hpp
include/tcalc_gui/: application.hpp  calculator.hpp  key.hpp  keyboard.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_a.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_10.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  (+54 more)
src/: builtins.cpp  error.cpp  eval.cpp  meson.build  parser.cpp  priority.cpp  token.cpp  tokenizer.cpp
src/ast/: binaryop.cpp  control_flow.cpp  function.cpp  meson.build  node.cpp  number.cpp  program.cpp  unaryop.cpp  variable.cpp
src/visitor/: eval.cpp  meson.build  print.cpp
tests/: meson.build  test_ast.cpp  test_eval.cpp  test_token.cpp  test_tokens.cpp
